@@ -100,6 +100,9 @@ BUG FIXES
 
     o	qt() now works for 0 < df < 1.
 
+    o	integrate() now accepts integer results from f(): as
+	documented, but only double was accepted.
+
 
 
 		CHANGES IN R VERSION 2.8.0
